test_regress/t/t_cover_sequence_unsup.out
%Error-UNSUPPORTED: t/t_cover_sequence_unsup.v:22:33: Unsupported: cover sequence where an 'or' operand has multiple matches
   22 |   cover sequence ((a ##[1:3] b) or 1'b0);
      |                                 ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_cover_sequence_unsup.v:25:32: Unsupported: cover sequence where an 'or' operand has multiple matches
   25 |   cover sequence ((a [* 1: 3]) or 1'b0);
      |                                ^~
%Error-UNSUPPORTED: t/t_cover_sequence_unsup.v:28:21: Unsupported: cover sequence with this ranged cycle delay
   28 |   cover sequence (a ##[1:2] (b ##1 c));
      |                     ^~
%Error-UNSUPPORTED: t/t_cover_sequence_unsup.v:31:21: Unsupported: cover sequence with this ranged cycle delay
   31 |   cover sequence (a ##[1:300] b);
      |                     ^~
%Error: Exiting due to
